z-index issues fixed and media queries done, place holders and minor css  changed to be done other than that it is finished

--- a/styles/mQuery.css
+++ b/styles/mQuery.css
@@ -97,19 +97,19 @@
     /*gallery music*/
 
     .mediaBtn{
-        bottom:4.8rem;
+        bottom:4.5rem;
     }
 
     .mediaBtn:active{
-        bottom:4.7rem;
+        bottom:4.3rem;
     }
 
     .musicBtn{
-        bottom:4.9rem;
+        bottom:4.5rem;
     }
 
     .musicBtn:active{
-        bottom:4.8rem;
+        bottom:4.3rem;
     }
 
     .mediaBtn,
@@ -258,10 +258,15 @@
      .copyRight h3,
      .footerNav ul li a{
          font-size: 2.8rem;
+         font-weight:bold;
      }
 
      .socialFooter ul li a{
          font-size: 3.3rem;
+     }
+
+     .overlay ul li a{
+         font-size: 3rem;
      }
 
   }
