--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ html, body{
 
 html{
     font-size: 10px;
-    font-family: 'Oswald', sans-serif
+    font-family: 'Oswald', sans-serif;
 }
 
 li{
@@ -68,7 +68,7 @@ header{
     background-attachment: fixed;
     background-position: center;
     background-size:cover;
-    margin-bottom:2rem;
+    margin-bottom:8rem;
     -webkit-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.75);
@@ -833,7 +833,6 @@ footer{
 
 .galleryMusic{
     width:98%;
-    position: relative;
     z-index: ;
     top: 7vh;
     margin: 0 auto;
